@@ -4,6 +4,7 @@ use strict;
 use Test::More tests => 4;
 use LWP::UserAgent;
 use WWW::Mechanize;
+use URI;
 
 =pod
 
@@ -13,17 +14,20 @@ credentials.  This test checks that this buggy behaviour is gone.
 
 =cut
 
-my $ua = LWP::UserAgent->new();
-my $m_1 = WWW::Mechanize->new();
-my $m_2 = WWW::Mechanize->new();
-my $m_3 = WWW::Mechanize->new();
+my $uri   = URI->new( 'http://localhost' );
+my $realm = 'myrealm';
 
-$m_1->credentials('m_1','m_1');
-$m_2->credentials('m_2','m_2');
+my $ua    = LWP::UserAgent->new();
+my $mech1 = WWW::Mechanize->new();
+my $mech2 = WWW::Mechanize->new();
+my $mech3 = WWW::Mechanize->new();
+
+$mech1->credentials('mech1','mech1');
+$mech2->credentials('mech2','mech2');
 
 my @ua = $ua->credentials;
-isnt( "@ua", "m_2 m_2", 'LWP::UserAgent instance retains its old credentials' );
+isnt( "@ua", "mech2 mech2", 'LWP::UserAgent instance retains its old credentials' );
 
-is_deeply [$m_1->get_basic_credentials], ['m_1','m_1'], 'First instance retains its credentials';
-is_deeply [$m_2->get_basic_credentials], ['m_2','m_2'], 'Second instance retains its credentials';
-is_deeply [$m_3->get_basic_credentials], [undef,undef], 'Untouched instance retains its credentials';
+is_deeply( [$mech1->get_basic_credentials( $realm, $uri )], ['mech1', 'mech1'], 'First instance retains its credentials' );
+is_deeply( [$mech2->get_basic_credentials( $realm, $uri )], ['mech2', 'mech2'], 'Second instance retains its credentials' );
+is_deeply( [$mech3->get_basic_credentials( $realm, $uri )], [],                 'Untouched instance retains its credentials' );
